--- a/Projetos/JavaLar/pom.xml
+++ b/Projetos/JavaLar/pom.xml
@@ -4,6 +4,18 @@
   <artifactId>JavaLar</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>JavaLar</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+    </dependencies>
+
+
+
+
     <build>
         <plugins>
             <plugin>
